[tool.poetry]
name = "aes-protocolos"
version = "0.1.0"
description = ""
authors = ["andrwgm <93148812+andrwgm@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bitarray = "^2.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
